assets/sass/styles.scss
$track-title: 			#000;
$user: 					#acbcbf;
$menu:	 				#feffba;
$active-track-bg: 		#8273ed;
$active-track-title: 	#fff;
$active-track-user:		#aea4f3;
$secondary-bg-color:	#feffba;

*{
	box-sizing: border-box;
}
body, html{
	height: 100%;
	width: 100%;
	margin: 0;
	font-family: "sofia-pro";
}
h1, h2, h3, h4{
	font-weight: normal;
	margin: 0;
}

.container{
	max-width: 780px;
	margin: 0 auto;
}

#mute.mute { text-decoration: line-through; }

.logo{
	font-size: 2em;
	padding: 1em;
}
.search-container{
	background-color: $secondary-bg-color;
	padding: 2em;
}
.search-bar{
	background-color: $secondary-bg-color;
	width: 100%;
	text-align: right;
	padding: 0.5em;
	border: 0;
	color: black;
	font-size: 25px;
	transition: 300ms all ease;
	border-bottom: 3px solid black;
	&:focus{
		outline: none;
		//background-color: darken($secondary-bg-color, 10%);
	}
}
.search-result {
	max-width: 600px;
	margin: 0 auto;
	padding: 0;
	overflow: hidden;

	.track__played { display: none; }
}

#player{

}

.track-search-list{

}
.track{
	list-style: none;
	clear: both;
	height: 144px;
	width: 100%;
	position: relative;
	cursor: pointer;
	&:after{
		display: block;
		content: "";
		position: absolute;
		right: 0;
		top: 0;
		height: 100%;
		width: 3em;
		background: linear-gradient(to right, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%); /* W3C */
	}
	.now-playing &{
		background-color: $active-track-bg;
	}
}
.track-inner{

}
.track__info{
	position: absolute;
	width: calc(100% - 148px);
	top: 0;
	right: 0;
	height: 100%;
	display: table;
}

.track__img {
	display: block;
	position: absolute;
	left: 0;
	top: 0;
	border-radius: 50%;
	overflow: hidden;
	padding: 22px;
}
.track__title{
	color: $track-title;
	font-size: 1.5em;
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
	.now-playing &{
		color: $active-track-title;
	}
}

.track__played {
	border: 1px solid #ccc;
	height: 30px;
	width: 90%;

	span {
		display: block;
		height: 100%;
		background: #aca;
		width: 0;
	}
}
.track__username{
	color: $user;
	.now-playing &{
		color: $active-track-user;
	}
}

.va{
	display: table-cell;
	vertical-align: middle;
}

